# fias-api

./: .gitignore  Makefile  README.md  pyproject.toml
fias/: main.py
fias/app/: app.py  db.py  model.py
fias/app/db/: db.py  db_parser.py  model.py
fias/app/parsers/: xml_parser.py
fias/app/routes/: __init__.py  addreses.py  hierarchy.py  types.py
fias/scripts/: helper.py  helpers.py  load_db.py  parser.py  xml.py
